<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.FeedbackFragment"
    android:background="@color/colorFragmentBackground">

    <TextView
        android:id="@+id/textViewAllQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_all_questions"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/calibri"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:textSize="17sp"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAllQuestions"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingEnd="30dp"
        android:fontFamily="@font/calibri"
        android:paddingStart="0dp"
        android:textIsSelectable="true"
        />


    <android.widget.Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/close"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mail"
        android:textColor="@color/colorView"
        android:fontFamily="@font/calibri"
        android:background="@drawable/custom_button_category"/>

</androidx.constraintlayout.widget.ConstraintLayout>