<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.start.StartFragment"
    android:background="@color/colorFragmentBackground">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_setting2"
        android:tint="@color/colorText"
        android:background="@drawable/button"/>

    <TextView
        android:id="@+id/tv_my_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ib_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/MyCards"
        android:textSize="26sp"
        android:fontFamily="@font/calibri"

        android:textColor="@color/colorText"/>

    <android.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:background="@drawable/search_view_background"
        android:queryHint="@string/search_for_cards"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        tools:listitem="@layout/card_item"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


    <TextView
        android:id="@+id/tv_no_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_cards"
        android:visibility="gone"
        android:fontFamily="@font/calibri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/tv_buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAdd"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/calibri"
        android:text="@string/add_card"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        android:backgroundTint="@color/colorView"
        app:srcCompat="@drawable/ic_add3"
        app:borderWidth="0dp"/>

    <TextView
        android:id="@+id/tv_button_hand_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/buttonHandInput"
        app:layout_constraintTop_toTopOf="@+id/buttonHandInput"
        app:layout_constraintEnd_toStartOf="@+id/buttonHandInput"
        android:visibility="invisible"
        android:textSize="11sp"
        android:fontFamily="@font/calibri"
        android:text="@string/hand_input"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonHandInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonScan"
        app:layout_constraintEnd_toEndOf="@+id/buttonScan"
        android:visibility="invisible"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/colorViewClick"
        app:srcCompat="@drawable/ic_hand_input"
        app:borderWidth="0dp"/>



    <TextView
        android:id="@+id/tv_button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/buttonScan"
        app:layout_constraintTop_toTopOf="@+id/buttonScan"
        app:layout_constraintEnd_toStartOf="@+id/buttonScan"
        android:visibility="invisible"
        android:textSize="11sp"
        android:fontFamily="@font/calibri"
        android:text="@string/scan_card"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="@+id/buttonAdd"

        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        android:backgroundTint="@color/colorViewClick"
        app:srcCompat="@drawable/ic_scanner"
        app:borderWidth="0dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>

