<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_scanner"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.scanner.ScannerFragment"
    android:background="@color/colorFragmentBackground">

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        app:autoFocusButtonColor="@android:color/white"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="@android:color/white"
        app:flashButtonVisible="true"
        app:frameAspectRatioHeight="1.1"
        app:frameAspectRatioWidth="2"
        app:frameColor="@android:color/white"
        app:frameCornersSize="50dp"
        app:frameSize="0.75"
        app:frameThickness="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maskColor="#77000000" />

    <TextView
        android:id="@+id/tv_scanner"
        android:text="@string/camera_helper"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scanner_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        android:fontFamily="@font/calibri"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        android:id="@+id/textinput_name_card_scanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_scanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/calibri"
        app:endIconMode="clear_text"
        >
        <android.widget.EditText
            android:id="@+id/edittext_card_name_scanner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/custom_edittext"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:fontFamily="@font/calibri"
            android:drawableStart="@drawable/custom_hand_input"
            android:drawablePadding="10dp"
            android:hint="@string/card_name"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            android:inputType="textCapSentences"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/tv_category"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/calibri"
        app:layout_constraintTop_toBottomOf="@+id/textinput_name_card_scanner"
        app:layout_constraintStart_toStartOf="@+id/textinput_name_card_scanner"
        app:layout_constraintEnd_toEndOf="@+id/textinput_name_card_scanner"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_button_category"
        android:text="@string/Category"
        android:textAllCaps="false"
        android:textColor="@color/colorView"
        />

    <TextView
        android:id="@+id/tv_scanner_empty"
        android:text="@string/codeIsNotReading"
        android:textColor="@color/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/calibri"
        app:layout_constraintBottom_toTopOf="@+id/addBtn_scanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/numberCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_scanner"
        app:layout_constraintStart_toStartOf="@+id/iv_scanner"
        android:textColor="@color/colorText"
        android:fontFamily="@font/calibri"
        app:layout_constraintEnd_toEndOf="@+id/iv_scanner"
        android:gravity="center"
        android:text="" />

    <android.widget.Button
        android:id="@+id/addBtn_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_add_button"
        android:textColor="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_add_card"
        android:drawableTint="@color/white"
        android:background="@drawable/custom_button_add"/>

</androidx.constraintlayout.widget.ConstraintLayout>