<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.detail_card.DetailFragment"
    android:background="@color/colorFragmentBackground">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/iconCategoryShape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </TextView>

        <ImageView
            android:id="@+id/iconCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:tint="#FFFFFF">
        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>





    <EditText
        android:id="@+id/tv_card_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:fontFamily="@font/calibri"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:hint="@string/card_name"
        android:textColorHint="@color/black"
        android:longClickable="false"
        android:cursorVisible="false"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textIsSelectable="false"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutIcon" />

    <ImageButton
        android:id="@+id/ib_edit"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:tint="@color/colorText"
        app:layout_constraintTop_toTopOf="@+id/tv_card_name_detail"
        app:layout_constraintBottom_toBottomOf="@+id/tv_card_name_detail"
        app:layout_constraintStart_toEndOf="@+id/tv_card_name_detail"
        android:src="@drawable/ic_edit"
        android:background="@drawable/button"/>

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_name_detail"
        app:layout_constraintBottom_toTopOf="@id/tv_card_category"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/save"
        android:fontFamily="@font/calibri"
        android:textColor="@color/save"
        android:background="@drawable/button_text"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_card_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:fontFamily="@font/calibri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_save" />

    <ImageView
        android:id="@+id/iv_card_code_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_name"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_category" />

    <TextView
        android:id="@+id/numberCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_card_code_detail"
        app:layout_constraintStart_toStartOf="@+id/iv_card_code_detail"
        android:textColor="@color/colorText"
        android:fontFamily="@font/calibri"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="@+id/iv_card_code_detail"
        android:gravity="center"
        android:text="" />

    <ImageButton
        android:id="@+id/btn_delete_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberCard"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_delete"
        app:tint="@color/colorText"
        android:background="@drawable/button_delete"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/delete_card"
        android:fontFamily="@font/calibri"
        android:textSize="12sp"/>

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_back"
        app:tint="@color/colorText"
        android:background="@drawable/button"
        />



</androidx.constraintlayout.widget.ConstraintLayout>